Backout backport of JDK-8211394 from jdk 8u-dev

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 8u202
    • Affects Version/s: 8u202
    • Component/s: hotspot
    • b02
    • Not verified

        The backport causes build failure:

        /s/hotspot/src/share/vm/classfile/verificationType.cpp: In member function 'bool VerificationType::is_reference_assignable_from(const VerificationType&, ClassVerifier*, bool, Thread*) const':/s/hotspot/src/share/vm/classfile/verificationType.cpp:102: error: expected primary-expression before '*' token

        or, on Windows:

        \s\hotspot\src\share\vm\classfile\verificationType.cpp(102) : error C2275: 'Thread' : illegal use of this type as an expression
                C:\jprt\T\P1\020004.robm\s\hotspot\src\share\vm\runtime/thread.hpp(102) : see declaration of 'Thread'

              Assignee:
              Ivan Gerasimov
              Reporter:
              Ivan Gerasimov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: