8212709: Backout backport of JDK-8211394 from jdk 8u-dev

Reviewed-by: dbuck