hotspot/src/share/vm/utilities/exceptions.hpp
@@ -201,7 +201,7 @@ class Exceptions {
 //
 // CAUTION: make sure that the function call using a CHECK macro is not the only statement of a
 // conditional branch w/o enclosing {} braces, since the CHECK macros expand into several state-
-// ments! Also make sure it is not used on a function call that is part of a return statement!
+// ments!
 
 #define PENDING_EXCEPTION                        (((ThreadShadow*)THREAD)->pending_exception())
 #define HAS_PENDING_EXCEPTION                    (((ThreadShadow*)THREAD)->has_pending_exception())
